# c-api

./: .gitignore  CMakeLists.txt  Doxyfile  KpMQTT_8h.html  KpMQTT_8h.js  KpMQTT_8h__incl.map  KpMQTT_8h__incl.md5  MqttConnection_8h.html  MqttConnection_8h.js  MqttConnection_8h__dep__incl.map  MqttConnection_8h__dep__incl.md5  MqttConnection_8h__incl.map  MqttConnection_8h__incl.md5  README.es.md  README.md  SsapMessageGenerator_8h.html  SsapMessageGenerator_8h.js  SsapMessageGenerator_8h__dep__incl.map  SsapMessageGenerator_8h__dep__incl.md5  SsapMessageGenerator_8h__incl.map  SsapMessageGenerator_8h__incl.md5  Utils_8h.html  Utils_8h.js  annotated.html  annotated.js  bulk_8c-example.html  classes.html  config_8c-example.html  deletes_8c-example.html  deprecated.html  dir_ebaa9c422e2faa7d2f93e66b1a6315cd.html  dir_ebaa9c422e2faa7d2f93e66b1a6315cd.js  dir_ebaa9c422e2faa7d2f93e66b1a6315cd_dep.map  dir_ebaa9c422e2faa7d2f93e66b1a6315cd_dep.md5  disconnections-data_8c-example.html  disconnections_8c-example.html  doxygen.override.css  examples.html  examples.js  files.html  (+45 more)
.kdev4/: c-api.kdev4
Windows Build/: SSAP.sln
Windows Build/cjson/: ReadMe.txt  cjson.cpp  cjson.vcxproj  cjson.vcxproj.filters  stdafx.cpp
Windows Build/example-bulk/: ReadMe.txt  example-bulk.cpp  example-bulk.vcxproj  example-bulk.vcxproj.filters  stdafx.cpp
cjson/: CMakeLists.txt  cJSON.c  cJSON.h
examples/: CMakeLists.txt  bulk.c  config.c  deletes.c  disconnections-data.c  disconnections.c  inserts.c  join-leave-ssl.c  join-leave.c  queries.c  subscribes.c  updates.c
paho-mqtt-c/: CMakeLists.txt  MQTTClient.c  MQTTClient.h  MQTTProtocolClient.c  SSLSocket.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  (+29 more)
ssap/: CMakeLists.txt  KpMQTT.c  KpMQTT.h  MqttConnection.c  MqttConnection.h  SsapMessageGenerator.c  SsapMessageGenerator.h  Utils.c  Utils.h  mainpage.dox  sleeps.h
(+42 files in other folders)
